--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.3.2
-pandas>=2.2.2
-gunicorn==20.1.0
-google-generativeai==0.4.0
-python-dotenv==1.0.0
+Flask==3.0.0
+pandas==2.1.4
+gunicorn==21.2.0
+google-generativeai==0.5.4
+python-dotenv==1.0.1
